// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`containers/layout should return logged in if logged in 1`] = `
Object {
  "loggedIn": true,
}
`;

exports[`containers/layout should return not logged in if logged out 1`] = `
Object {
  "loggedIn": false,
}
`;
